--- a/openapi/bundled.yaml
+++ b/openapi/bundled.yaml
@@ -21,7 +21,7 @@ paths:
   /networks:
     get:
       summary: GET /networks
-      description: 'This endpoint provides data about all available bike networks  around the world, including their names and IDs. '
+      description: This endpoint provides data about all available bike networks,  including their names, IDs, locations, and associated companies.
       tags:
         - Networks
       parameters:
