Set expandResponses to expand all

--- a/redocly.yaml
+++ b/redocly.yaml
@@ -9,6 +9,7 @@ rules:
 theme:
   openapi:
     hideDownloadButton: true
+    expandResponses: 'all'
     htmlTemplate: ./docs/index.html
     theme:
       colors:
