--- a/openapi/bundled.yaml
+++ b/openapi/bundled.yaml
@@ -2,13 +2,13 @@ openapi: 3.1.0
 info:
   title: CityBikes API Documentation
   description: |-
-    This is document explains how to use the CityBikes API.  
+    This API documentation explains how to use the CityBikes API for developers. 
 
-    CityBikes, powered by [PyBikes](https://github.com/eskerda/pybikes),  is an open-source project providing information about global  bike-sharing transportation services.  
+    It leverages Redoc to enhance the  [existing documentation](https://api.citybik.es/v2/) by elaborating  on all avaliable endpoints, requests and responses, schemas, error codes, authentication requirements, and examples. 
 
-    This document aims to leverage Redoc to enhance  the [existing documentation](https://api.citybik.es/v2/).
+    [CityBikes](https://www.citybik.es/), powered by  [PyBikes](https://github.com/eskerda/pybikes),  is an open-source project providing information about global  bike-sharing transportation services.  
 
-    *Last updated: March 9, 2024*
+    *Last updated: March 12, 2024*
     # Authentication  
     No authentication or API key required. 
     # Base URL  
