Update colors for right side panel

--- a/redocly.yaml
+++ b/redocly.yaml
@@ -24,6 +24,7 @@ theme:
           fontWeight: "1500"
       rightPanel:
         width: 45%
+        backgroundColor: "#001d3d"
       sidebar:
         width: "260px"
         textColor: "#000000"
