Update About / description; fix typo

--- a/openapi/bundled.yaml
+++ b/openapi/bundled.yaml
@@ -2,13 +2,13 @@ openapi: 3.1.0
 info:
   title: CityBikes API Documentation
   description: |-
-    This API documentation explains how to use the CityBikes API for developers. 
-
-    It leverages Redoc to enhance the  [existing documentation](https://api.citybik.es/v2/) by elaborating  on all avaliable endpoints, requests and responses, schemas, error codes, authentication requirements, and examples. 
+    This API documentation explains how to use the CityBikes API for developers.  
 
     [CityBikes](https://www.citybik.es/), powered by  [PyBikes](https://github.com/eskerda/pybikes),  is an open-source project providing information about global  bike-sharing transportation services.  
 
-    *Last updated: March 12, 2024*
+    This documentation leverages Redoc to enhance the  [existing documentation](https://api.citybik.es/v2/) by elaborating  on all endpoints, requests and responses, schemas, error codes, authentication requirements, and examples. 
+
+    *Last updated: June 26, 2024*
     # Authentication  
     No authentication or API key required. 
     # Base URL  
